0.99.8.5

* Improved Raptr extension.
* Improved DeviantArt extension.

0.99.8.4

* Fixed an issue created in 0.99.8.3 with yield_many().

0.99.8.3

* ID fixes for expanding events.
* Added a yield_many() method to LifeStream_Extension. See included raptr extension for usage.
* Added Raptr feed for tracking played games and achievements.
* Fixed an issue with the Errors page.
* Updated German localization.

0.99.8.2

* Added Swedish translation from Jens Wedin.
* Fixed expand toggle links.
* Removed $id global from theme templates.
* Fixed url encoding on Twitter passwords.

0.99.8.1

* Introduced icon packs.
* Fixed a bug with icons on the errors panel.
* Cleaned up some admin panels UI and design.
* get_icon_url() will now fall back on generic.png if icon is not present.

0.99.8.0

* Refactored all rendering to require a label bringing it closer in line with Lifestrm.
* Sidebar and main templates now render timestamps differently.
* Fixed a legacy issue with BlipFM
* Templates should now be fully customizable.
* Added `get_event_link()` to feeds.
* Fixed display of Events in admin.
* Lifestream will now fall back on the default theme for missing files.
* Theme structures have been changed, and now require a theme.txt.

0.99.7.4

* Updated Vimeo feed URLs.
* Updated YouTube feed URLs.
* Moved metadata rendering into a separate template.

0.99.7.3

* lifestream.css has been moved into the theme.
* Twitter can now use HTTP Auth (if you specify a password) to fetch updates.
* If an option field's name ends with password it will show as a password field.
* Changing themes really works now.
* Relabeled all occurrences of "LifeStream" to "Lifestream".
* Timezone offset option has been removed, and is now using the built-in gmt_offset option.
* Added maintenance panel initially with reset default options and cron tasks.
* Fixed an issue with cron timers being scheduled oddly.

0.99.7.2
